--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,14 @@
             <button class="button" id="generate-qr" onclick="requestSale()" disabled>Generate QR</button>
             <p id="messageContainer"></p>
         </div>
-        <div class="popover" id="qrCodeContainer">
+        <div class="popover_custom" id="qrCodeContainer">
             <div id="qrCode"></div>
             <div id="displayedAmount"></div>
             <button class="button" id="request-payment" onclick="requestPayment()" disabled>Payment</button>
             <div id="closeButton" onclick="clearQR()"></div>
         </div>
-        <div class="overlay" id="qrCodeContainerOverlay"></div>
-        <div class="popover" id="loader"></div>
-        <div class="overlay" id="loaderOverlay"></div>
+        <div class="overlay_custom" id="qrCodeContainerOverlay"></div>
+        <div class="popover_custom" id="loader"></div>
+        <div class="overlay_custom" id="loaderOverlay"></div>
     </body>
 </html>
